chore: ui update

--- a/foretell-app/styles/globals.css
+++ b/foretell-app/styles/globals.css
@@ -1,3 +1,11 @@
 @import "tailwindcss";
 
-@config "../tailwind.config.js"
+@config "../tailwind.config.js";
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
+*::-moz-scrollbar {
+  display: none;
+}
